# AudioCodec

./: .gitignore  AGENTS.md  README.md  environment.yaml  pyproject.toml  startpoint.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: course-project.yml
configs/: ablation-adversarial-msstft-balanced-2kbps.json  ablation-adversarial-msstft-balanced-4kbps.json  ablation-adversarial-msstft-balanced-8kbps.json  ablation-adversarial-msstft-balanced.json  ablation-adversarial-msstft.json  ablation-encodec-like-loss.json  ablation-mel-loss.json  baseline.json  encodec-inspired.json
docs/: overview.md
docs/adr/: 0001-course-project-scope.md
docs/architecture/: baseline-neural-codec.md  encodec-inspired-codec.md
docs/how-to/: run-traditional-codec-benchmark.md  train-on-linux.md
docs/report/: .gitignore  main.typ  refs.bib  showcase.typ  theme.typ
evals/: README.md
evals/scripts/: _common.py  _metrics.py  build_manifest.py  export_neural_codec.py  run_traditional_codec.py  score_outputs.py
plans/active/: TASK-001-course-project-bootstrap.md  TASK-002-linux-training-handoff.md  TASK-003-encodec-inspired-pivot.md  TASK-004-encodec-like-loss-ablation.md  TASK-005-encodec-training-alignment.md  TASK-006-traditional-codec-benchmark.md  TASK-007-report-writing.md
plans/archive/: TASK-001-course-project-bootstrap.md  TASK-002-linux-training-handoff.md  (+4 more)
scripts/: train_codec.py
tests/: test_adversarial.py  test_balancer.py  test_codec_model.py  test_config.py  test_evals_scripts.py  test_losses.py  test_splits.py  test_train.py
(+22 files in other folders)
