[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiocodec"
version = "0.1.0"
description = "Speech neural codec baseline for the AudioCodec course project."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchaudio>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

