[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiocodec"
version = "0.1.0"
description = "Speech neural codec baseline for the MultiMedia course project."
requires-python = ">=3.10"
dependencies = [
  "pystoi>=0.4.1,<1",
  "tensorboard>=2.16,<3",
  "torch>=2.2",
  "torchaudio>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
